<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_screen_header">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_library_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="consumer_application">Пользовательское соглашение</string>
    <string name="yandex_practicum_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="text_to_support">Спасибо разработчикам за крутое приложение!</string>
    <string name="topic_text_to_support">Сообщение разработчикам приложения Playlist Maker</string>
    <string name="student_email">ArbeitenDenis@yandex.ru</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="app_not_found">No application found</string>
    <string name="nothing_found_placeholder_text">Ничего не нашлось</string>
    <string name="network_error_placeholder_text">"Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету"</string>
    <string name="refresh_button_text">Обновить</string>
    <string name="clear_history_button_text">Очистить историю</string>
    <string name="search_history_text">Вы искали</string>
    <string name="duration_field_text">Длительность</string>
    <string name="album_field_text">Альбом</string>
    <string name="year_field_text">Год</string>
    <string name="genre_field_text">Жанр</string>
    <string name="country_field_text">Страна</string>
</resources>