<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/screen_horizontal_padding"
    android:paddingTop="@dimen/screen_top_padding"
    android:paddingBottom="@dimen/screen_bottom_padding">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settings_back"
            style="@style/ScreenHeaderTextView"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:drawablePadding="28dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/settings_button" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            style="@style/SettingsScreenButtonStyle"
            android:drawableRight="@drawable/ic_switcher"
            android:text="@string/dark_theme" />

        <TextView
            style="@style/SettingsScreenButtonStyle"
            android:drawableRight="@drawable/ic_share"
            android:text="@string/share" />

        <TextView
            style="@style/SettingsScreenButtonStyle"
            android:drawableRight="@drawable/ic_support"
            android:text="@string/support" />

        <TextView
            style="@style/SettingsScreenButtonStyle"
            android:drawableRight="@drawable/ic_arrow_forward"
            android:text="@string/consumer_application" />
    </LinearLayout>
</LinearLayout>