<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/screen_horizontal_padding"
    android:paddingTop="@dimen/screen_top_padding"
    android:paddingBottom="@dimen/screen_bottom_padding">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ScreenHeaderTextView"
            android:text="@string/main_screen_header"
            android:textColor="@color/white" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            style="@style/MainScreenButtonStyle"
            android:text="@string/search_button"
            app:icon="@drawable/ic_search" />

        <Button
            android:id="@+id/media_library"
            style="@style/MainScreenButtonStyle"
            android:text="@string/media_library_button"
            app:icon="@drawable/ic_library" />

        <Button
            android:id="@+id/settings"
            style="@style/MainScreenButtonStyle"
            android:text="@string/settings_button"
            app:icon="@drawable/ic_settings" />
    </LinearLayout>
</LinearLayout>