<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/arrowBack"
        style="@style/ArrowBackIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/artWork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/album_placeholder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/arrowBack" />

    <TextView
        android:id="@+id/trackName"
        style="@style/AudioPlayerSongNameText"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginTop="24sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Yesterday (Remastered 2009)"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/artWork" />

    <TextView
        android:id="@+id/artistName"
        style="@style/AudioPlayerArtistNameText"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginTop="12sp"
        android:text="The Beatles"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/trackName" />

    <ImageView
        android:id="@+id/playlistButton"
        style="@style/AudioPlayerAddToPlaylistButton"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toStartOf="@id/playButton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/artistName" />

    <ImageView
        android:id="@+id/playButton"
        style="@style/AudioPlayerPlayButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@id/favoriteButton"
        app:layout_constraintStart_toEndOf="@id/playlistButton"
        app:layout_constraintTop_toBottomOf="@id/artistName" />

    <ImageView
        android:id="@+id/favoriteButton"
        style="@style/AudioPlayerAddToFavoriteButton"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/artistName" />

    <TextView
        android:id="@+id/timerProgressBar"
        style="@style/AudioPlayerTimerProgress"
        android:layout_width="wrap_content"
        android:layout_marginTop="4dp"
        android:maxWidth="100dp"
        android:text="0:30"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/playButton" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerProgressBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/labelsBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="duration" />

            <TextView
                android:id="@+id/duration"
                style="@style/AudioPlayerInformationFieldText"
                android:layout_width="0dp"
                android:text="@string/duration_field_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/album"
                style="@style/AudioPlayerInformationFieldText"
                android:layout_width="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/album_field_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/duration" />

            <TextView
                android:id="@+id/year"
                style="@style/AudioPlayerInformationFieldText"
                android:layout_width="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/year_field_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album" />

            <TextView
                android:id="@+id/genreText"
                style="@style/AudioPlayerInformationFieldText"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/genre_field_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/year" />

            <TextView
                android:id="@+id/countryLabel"
                style="@style/AudioPlayerInformationFieldText"
                android:layout_width="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/country_field_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genreText" />

            <TextView
                android:id="@+id/trackTime"
                style="@style/AudioPlayerSongInformation"
                android:layout_width="0dp"
                android:text="5:35"
                app:layout_constraintBaseline_toBaselineOf="@id/duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier" />

            <TextView
                android:id="@+id/collectionName"
                style="@style/AudioPlayerSongInformation"
                android:layout_width="0dp"
                android:fontFamily="@font/ys_display_regular"
                android:text="Yesterday (Remastered 2009)"
                app:layout_constraintBaseline_toBaselineOf="@id/album"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier" />

            <TextView
                android:id="@+id/releaseDate"
                style="@style/AudioPlayerSongInformation"
                android:layout_width="0dp"
                android:fontFamily="@font/ys_display_regular"
                android:text="1965"
                app:layout_constraintBaseline_toBaselineOf="@id/year"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier" />

            <TextView
                android:id="@+id/primaryGenreName"
                style="@style/AudioPlayerSongInformation"
                android:layout_width="0dp"
                android:text="Rock"
                app:layout_constraintBaseline_toBaselineOf="@id/genreText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier" />

            <TextView
                android:id="@+id/country"
                style="@style/AudioPlayerSongInformation"
                android:layout_width="0dp"
                android:text="Великобритания"
                app:layout_constraintBaseline_toBaselineOf="@id/countryLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelsBarrier" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>